--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@storybook/node-logger": "^6.3.1",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.3.1",
-    "@types/styled-components": "^5.1.10"
+    "@types/styled-components": "^5.1.10",
+    "chromatic": "^5.9.2"
   }
 }
